Create database connection, User & Task

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,12 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.HabitForge">
         <activity
+            android:name=".presentation.activity.AddTaskActivity"
+            android:exported="false" />
+        <!-- <activity -->
+        <!-- android:name=".presentation.activity.RegistrationActivity" -->
+        <!-- android:exported="false" /> -->
+        <activity
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
