--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,7 +34,11 @@ dependencies {
     implementation libs.material
     implementation libs.activity
     implementation libs.constraintlayout
+    implementation libs.play.services.tasks
     testImplementation libs.junit
     androidTestImplementation libs.ext.junit
     androidTestImplementation libs.espresso.core
+    implementation libs.firebase.database
+    implementation libs.firebase.firestore
+    implementation libs.firebase.auth
 }
