--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,9 +14,9 @@
         <activity
             android:name=".presentation.activity.AddTaskActivity"
             android:exported="false" />
-        <!-- <activity -->
-        <!-- android:name=".presentation.activity.RegistrationActivity" -->
-        <!-- android:exported="false" /> -->
+         <activity
+         android:name=".presentation.activity.RegistrationActivity"
+         android:exported="false" />
         <activity
             android:name=".MainActivity"
             android:exported="true">
