--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,7 @@
 plugins {
     alias(libs.plugins.android.application)
+    alias(libs.plugins.google.gms.google.services)
+
 }
 
 android {
@@ -29,7 +31,14 @@ android {
 }
 
 dependencies {
+    // Firebase BoM (kontroliše sve verzije Firebase biblioteka)
+    implementation platform("com.google.firebase:firebase-bom:34.2.0")
 
+    // Firebase SDKs
+    implementation "com.google.firebase:firebase-auth"
+    implementation "com.google.firebase:firebase-database"
+    implementation "com.google.firebase:firebase-firestore"
+    implementation "com.google.firebase:firebase-analytics"
     implementation libs.appcompat
     implementation libs.material
     implementation libs.activity
