--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,7 @@
         <!-- <activity -->
         <!-- android:name=".presentation.activity.RegistrationActivity" -->
         <!-- android:exported="false" /> -->
+        <activity android:name=".presentation.activity.RegistrationActivity" />
         <activity
             android:name=".MainActivity"
             android:exported="true">
