--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,9 @@
 
         <activity android:name=".presentation.activity.AddCategoryActivity"
             android:exported="false" />
+        <activity
+            android:name=".presentation.activity.TaskCalendarActivity"
+            android:exported="false" />
 
         <activity android:name=".presentation.activity.RegistrationActivity"
             android:exported="false" />
@@ -27,6 +30,13 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <activity
+            android:name=".presentation.activity.TaskDetailsActivity"
+            android:exported="false"
+            android:label="Task Details"
+            android:theme="@style/Theme.MaterialComponents.DayNight.NoActionBar" />
+
 
     </application>
 
