--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,7 +36,8 @@ android {
 dependencies {
     // Firebase BoM (kontroliše sve verzije Firebase biblioteka)
     implementation platform("com.google.firebase:firebase-bom:34.2.0")
-
+    implementation 'com.google.zxing:core:3.5.2'
+    implementation "androidx.recyclerview:recyclerview:1.3.1"
     // Firebase SDKs
     implementation "com.google.firebase:firebase-auth"
     implementation "com.google.firebase:firebase-database"
@@ -52,6 +53,7 @@ dependencies {
     implementation libs.lifecycle.viewmodel.ktx
     implementation libs.navigation.fragment
     implementation libs.navigation.ui
+    implementation libs.recyclerview
     testImplementation libs.junit
     androidTestImplementation libs.ext.junit
     androidTestImplementation libs.espresso.core
