minor changes in anroid manifest

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,7 +26,15 @@
         <!-- android:name=".presentation.activity.RegistrationActivity" -->
         <!-- android:exported="false" /> -->
         <activity android:name=".presentation.activity.RegistrationActivity" />
+        <activity
+            android:name=".MainActivity"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
 
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
 
         <activity android:name=".presentation.activity.AddCategoryActivity"
             android:exported="false" />
