--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,10 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.HabitForge">
         <activity
+            android:name=".presentation.activity.ShopActivity"
+            android:exported="false"
+            android:theme="@style/Theme.HabitForge" />
+        <activity
             android:name=".presentation.activity.NavigationActivity"
             android:exported="false"
             android:label="@string/title_activity_navigation"
@@ -35,31 +39,24 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
-        <activity android:name=".presentation.activity.AddCategoryActivity"
+        <activity
+            android:name=".presentation.activity.AddCategoryActivity"
             android:exported="false" />
         <activity
             android:name=".presentation.activity.TaskCalendarActivity"
-            android:exported="false" />
-
-
-<!--        &lt;!&ndash; Ovo je launcher aktivnost &ndash;&gt;-->
-<!--        <activity android:name=".presentation.activity.AddTaskActivity"-->
-<!--            android:exported="true">-->
-<!--            <intent-filter>-->
-<!--                <action android:name="android.intent.action.MAIN" />-->
-
-<!--                <category android:name="android.intent.category.LAUNCHER" />-->
-<!--            </intent-filter>-->
-<!--        </activity>-->
-
+            android:exported="false" /> <!-- &lt;!&ndash; Ovo je launcher aktivnost &ndash;&gt; -->
+        <!-- <activity android:name=".presentation.activity.AddTaskActivity" -->
+        <!-- android:exported="true"> -->
+        <!-- <intent-filter> -->
+        <!-- <action android:name="android.intent.action.MAIN" /> -->
+        <!-- <category android:name="android.intent.category.LAUNCHER" /> -->
+        <!-- </intent-filter> -->
+        <!-- </activity> -->
         <activity
             android:name=".presentation.activity.TaskDetailsActivity"
             android:exported="false"
             android:label="Task Details"
             android:theme="@style/Theme.MaterialComponents.DayNight.NoActionBar" />
-
-
     </application>
 
 </manifest>
