delete task,task list,one task,points

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,6 +11,18 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.HabitForge">
+
+        <!-- 🔸 Glavna aktivnost (launcher) -->
+        <activity
+            android:name=".MainActivity"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+
+        <!-- 🔹 Navigacija i login -->
         <activity
             android:name=".presentation.activity.NavigationActivity"
             android:exported="false"
@@ -21,44 +33,38 @@
             android:exported="false"
             android:label="@string/title_activity_login" />
         <activity
-            android:name=".presentation.activity.AddTaskActivity"
-            android:exported="false" /> <!-- <activity -->
-        <!-- android:name=".presentation.activity.RegistrationActivity" -->
-        <!-- android:exported="false" /> -->
-        <activity android:name=".presentation.activity.RegistrationActivity" />
+            android:name=".presentation.activity.RegistrationActivity"
+            android:exported="false" />
+
+        <!-- 🔹 Task aktivnosti -->
         <activity
-            android:name=".MainActivity"
-            android:exported="true">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
-
-        <activity android:name=".presentation.activity.AddCategoryActivity"
+            android:name=".presentation.activity.AddTaskActivity"
             android:exported="false" />
         <activity
             android:name=".presentation.activity.TaskCalendarActivity"
             android:exported="false" />
-
-
-<!--        &lt;!&ndash; Ovo je launcher aktivnost &ndash;&gt;-->
-<!--        <activity android:name=".presentation.activity.AddTaskActivity"-->
-<!--            android:exported="true">-->
-<!--            <intent-filter>-->
-<!--                <action android:name="android.intent.action.MAIN" />-->
-
-<!--                <category android:name="android.intent.category.LAUNCHER" />-->
-<!--            </intent-filter>-->
-<!--        </activity>-->
-
         <activity
             android:name=".presentation.activity.TaskDetailsActivity"
             android:exported="false"
             android:label="Task Details"
             android:theme="@style/Theme.MaterialComponents.DayNight.NoActionBar" />
 
+        <!-- 🔹 Category aktivnosti -->
+        <activity
+            android:name=".presentation.activity.AddCategoryActivity"
+            android:exported="false" />
+        <activity
+            android:name=".presentation.activity.CategoryListActivity"
+            android:exported="false"
+            android:label="Categories" />
+
+        <activity
+            android:name=".presentation.activity.TaskListActivity"
+            android:exported="false" />
+
+        <activity
+            android:name=".presentation.activity.FullTaskInfoActivity"
+            android:exported="false" />
 
     </application>
 
