--- a/app/build.gradle
+++ b/app/build.gradle
@@ -62,4 +62,7 @@ dependencies {
     implementation libs.firebase.auth
     implementation 'com.github.mhiew:material-calendarview:2.0.1'
     implementation 'com.jakewharton.threetenabp:threetenabp:1.4.7'
+    implementation 'com.github.bumptech.glide:glide:4.16.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.16.0'
+
 }
