--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,6 +31,18 @@ android {
     buildFeatures {
         viewBinding true
     }
+    packagingOptions {
+        resources {
+            excludes += [
+                    "META-INF/INDEX.LIST",
+                    "META-INF/DEPENDENCIES",
+                    "META-INF/LICENSE",
+                    "META-INF/LICENSE.txt",
+                    "META-INF/NOTICE",
+                    "META-INF/NOTICE.txt"
+            ]
+        }
+    }
 }
 
 dependencies {
@@ -63,6 +75,10 @@ dependencies {
     implementation 'com.github.mhiew:material-calendarview:2.0.1'
     implementation 'com.jakewharton.threetenabp:threetenabp:1.4.7'
     implementation 'com.github.bumptech.glide:glide:4.16.0'
+    implementation 'com.journeyapps:zxing-android-embedded:4.3.0'
+    implementation 'com.android.volley:volley:1.2.1'
+    implementation 'com.google.auth:google-auth-library-oauth2-http:1.22.0'
+    implementation platform('com.google.firebase:firebase-bom:32.2.2') // najnoviji BoM
+    implementation 'com.google.firebase:firebase-messaging'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.16.0'
-
 }
