--- a/app/build.gradle
+++ b/app/build.gradle
@@ -80,6 +80,7 @@ dependencies {
     implementation 'com.google.auth:google-auth-library-oauth2-http:1.22.0'
     implementation platform('com.google.firebase:firebase-bom:32.2.2') // najnoviji BoM
     implementation 'com.google.firebase:firebase-messaging'
+    implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
     implementation 'org.json:json:20211205' // ako ti org.json nije dostupan
 
     annotationProcessor 'com.github.bumptech.glide:compiler:4.16.0'
